@@ -1,3 +1,4 @@
+05-Dec-2012 - AnS - fixed zapper and mouse positioning in fullscreen and bestfit mode
 04-Dec-2012 - AnS - speed up HUD text drawing
 04-Dec-2012 - AnS - Taseditor: speed up consecutive Recordings (when combining)
 03-Dec-2012 - AnS - Taseditor: fixed accelerators when editing Notes
